added desktop view sniper page

--- a/src/html/_sniper.html
+++ b/src/html/_sniper.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="tab__contents">
-      <div class="tab__content active" data-tab-content="Settings">
+      <div class="tab__content tab__content--absulate active" data-tab-content="Settings">
         <form action="#" class="filters-page__form">
           <div class="filters-page__content">
             <div class="input-rows">
@@ -187,7 +187,7 @@
                   </div>
                 </div>
 
-                <div class="tab__graphik">
+                <div class="tab__graphik desktop-dn">
                   <div class="tab__graphik-num green-text">
                     <img src="./img/icons/percent-top.svg" alt="percent">
                     <span>0.05336%</span>
@@ -198,9 +198,35 @@
                   </div>
                 </div>
               </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row"> Network</div>
+                  <div class="tab__token-row">BSC</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Sale Start Time</div>
+                  <div class="tab__token-row">123K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Expected Price</div>
+                  <div class="tab__token-row">2K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <button type="button" class="outline-btn outline-btn--mini">snipe</button>
+              </div>
+
             </div>
 
-            <div class="tab__blocks">
+            <div class="tab__blocks desktop-dn">
               <div class="tab__block">
                 <span>Vol</span>
                 <p>7K</p>
@@ -265,10 +291,10 @@
                   </div>
                 </div>
 
-                <div class="tab__graphik">
+                <div class="tab__graphik desktop-dn">
                   <div class="tab__graphik-num red-text">
                     <img src="./img/icons/percent-bottom.svg" alt="percent">
-                    <span>6%</span>
+                    <span>0.05336%</span>
                   </div>
 
                   <div class="tab__graphik-picture">
@@ -276,9 +302,243 @@
                   </div>
                 </div>
               </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row"> Network</div>
+                  <div class="tab__token-row">BSC</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Sale Start Time</div>
+                  <div class="tab__token-row">123K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Expected Price</div>
+                  <div class="tab__token-row">2K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <button type="button" class="outline-btn outline-btn--mini">snipe</button>
+              </div>
+
             </div>
 
-            <div class="tab__blocks">
+            <div class="tab__blocks desktop-dn">
+              <div class="tab__block">
+                <span>Vol</span>
+                <p>7K</p>
+              </div>
+
+              <div class="tab__block">
+                <span>Liq</span>
+                <p>$633</p>
+              </div>
+
+              <div class="tab__block">
+                <img width="12" height="12" src="./img/icons/peoples.svg" alt="icon">
+                <p>3</p>
+              </div>
+
+              <div class="tab__block">
+                <span>MC</span>
+                <p>$4K</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="tab__item tab__item--column tab__item--border">
+            <div class="tab__info">
+              <div class="tab__token">
+                <div class="tab__token-picture">
+                  <img class="tab__token-pic" width="46" height="46" src="./img/tokens/Cryptocurrency.svg"
+                    alt="token icon">
+                  <img class="tab__token-subpic" width="20" height="20" src="./img/tokens/binance.svg"
+                    alt="Cryptocurrency icon">
+                </div>
+
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">
+                    <p class="tab__token-name">BTC</p>
+                    <p class="tab__token-subname">Bitcoin</p>
+                  </div>
+
+                  <div class="tab__token-row">
+                    <div class="tab__token-socials">
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/x.svg" alt="x icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/instagram.svg" alt="instagram icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/bxl_telegram.svg" alt="bxl_telegram icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/tabler_brand-coinbase.svg"
+                          alt="tabler_brand-coinbase icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/mdi_web.svg" alt="mdi_web icon">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="tab__graphik desktop-dn">
+                  <div class="tab__graphik-num green-text">
+                    <img src="./img/icons/percent-top.svg" alt="percent">
+                    <span>0.05336%</span>
+                  </div>
+
+                  <div class="tab__graphik-picture">
+                    <img width="74" src="./img/green-graphik.svg" alt="graphik">
+                  </div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row"> Network</div>
+                  <div class="tab__token-row">BSC</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Sale Start Time</div>
+                  <div class="tab__token-row">123K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Expected Price</div>
+                  <div class="tab__token-row">2K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <button type="button" class="outline-btn outline-btn--mini">snipe</button>
+              </div>
+
+            </div>
+
+            <div class="tab__blocks desktop-dn">
+              <div class="tab__block">
+                <span>Vol</span>
+                <p>7K</p>
+              </div>
+
+              <div class="tab__block">
+                <span>Liq</span>
+                <p>$633</p>
+              </div>
+
+              <div class="tab__block">
+                <img width="12" height="12" src="./img/icons/peoples.svg" alt="icon">
+                <p>3</p>
+              </div>
+
+              <div class="tab__block">
+                <span>MC</span>
+                <p>$4K</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="tab__item tab__item--column tab__item--border">
+            <div class="tab__info">
+              <div class="tab__token">
+                <div class="tab__token-picture">
+                  <img class="tab__token-pic" width="46" height="46" src="./img/tokens/Cryptocurrency.svg"
+                    alt="token icon">
+                  <img class="tab__token-subpic" width="20" height="20" src="./img/tokens/binance.svg"
+                    alt="Cryptocurrency icon">
+                </div>
+
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">
+                    <p class="tab__token-name">BTC</p>
+                    <p class="tab__token-subname">Bitcoin</p>
+                  </div>
+
+                  <div class="tab__token-row">
+                    <div class="tab__token-socials">
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/x.svg" alt="x icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/instagram.svg" alt="instagram icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/bxl_telegram.svg" alt="bxl_telegram icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/tabler_brand-coinbase.svg"
+                          alt="tabler_brand-coinbase icon">
+                      </a>
+
+                      <a href="#" class="tab__token-social">
+                        <img width="12" height="12" src="./img/icons/mdi_web.svg" alt="mdi_web icon">
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="tab__graphik desktop-dn">
+                  <div class="tab__graphik-num green-text">
+                    <img src="./img/icons/percent-top.svg" alt="percent">
+                    <span>0.05336%</span>
+                  </div>
+
+                  <div class="tab__graphik-picture">
+                    <img width="74" src="./img/green-graphik.svg" alt="graphik">
+                  </div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row"> Network</div>
+                  <div class="tab__token-row">BSC</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Sale Start Time</div>
+                  <div class="tab__token-row">123K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <div class="tab__token-rows">
+                  <div class="tab__token-row">Expected Price</div>
+                  <div class="tab__token-row">2K</div>
+                </div>
+              </div>
+
+              <div class="tab__info-item mobile-dn">
+                <button type="button" class="outline-btn outline-btn--mini">snipe</button>
+              </div>
+
+            </div>
+
+            <div class="tab__blocks desktop-dn">
               <div class="tab__block">
                 <span>Vol</span>
                 <p>7K</p>
@@ -304,6 +564,7 @@
       </div>
 
       <div class="tab__content" data-tab-content="History">
+        <h4 class="tab__content-label mobile-dn">History</h4>
         <div class="table-wrapper">
           <table class="table">
             <thead>
@@ -315,7 +576,7 @@
                 </th>
                 <th>
                   <div class="table__relative">
-                    <button type="button" class="table__left-btn">
+                    <button type="button" class="table__left-btn desktop-dn">
                       <img width="6" src="./img/icons/left-tringle.svg" alt="left-tringle icon">
                     </button>
                     <div class="table__head">
